--- a/wishlist_backend/.envy
+++ b/wishlist_backend/.envy
@@ -1,9 +1,9 @@
 SERVER = localhost
-PORT = 80
+PORT = 7000
 
 DATABASE_USERNAME = root
 DATABASE_PASSWORD = root
-DATABASE_HOST = 127.0.0.1
+DATABASE_HOST = db
 DATABASE_NAME = wishlist
 DATABASE_PORT = 5432
 DATABASE_SYNCHRONIZE = true
