--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       dockerfile: Dockerfile
     image: backend
     container_name: backend
-    env_file: ./wishlist_backend/ .env
+    env_file: ./wishlist_backend/.env
     networks:
       - platform_network
     links:
@@ -37,10 +37,10 @@ services:
     ports:
       - '5432:5432'
     environment:
-      - POSTGRES_USER: root
-      - POSTGRES_PASSWORD: root
-      - POSTGRES_DB: wishlist
-      - PGDATA: /var/lib/postgresql/data/pgdata
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: root
+      POSTGRES_DB: wishlist
+      PGDATA: /var/lib/postgresql/data/pgdata
     command: postgres
     restart: always
     volumes:
